--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -46,7 +46,10 @@
       </div>
 
       <div class="footer-col  footer-col-3">
-        <p class="text">{{ site.description }}</p>
+        <p class="text">
+          I hope to one day write about things like software, music, food, climbing, and maybe a bit of fiction.
+          I currently work at <a href="https://floobits.com">floobits</a> and live in San Francisco.
+        </p>
       </div>
     </div>
 
