--- a/css/main.scss
+++ b/css/main.scss
@@ -50,3 +50,9 @@ $on-laptop:        800px;
         "layout",
         "syntax-highlighting"
 ;
+
+article {
+  h1 {
+    font-family: Verdana,sans-serif;
+  }
+}
